Fix footer tagline alignment

--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -106,7 +106,7 @@
 	background-position: 50% 50%;
 }
 
-.site-tagline {
+.site-header .site-tagline {
 	max-width: 13em;
 
 	margin-right: auto;
